new singleton pattern

--- a/package.json
+++ b/package.json
@@ -81,7 +81,7 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
-    "tccore-react-native": "github:commandersAct/tccore-react-native#1.0.1"
+    "tccore-react-native": "git+https://gitlab.tagcommander.com/mobile/tccore-react-native#develop"
   },
   "resolutions": {
     "@types/react": "17.0.21"
