--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "tcserverside-react-native",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": " Commanders Act's ServerSide SDK bridge for react native",
   "main": "src/index",
   "module": "src/index",
@@ -81,7 +81,7 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
-    "tccore-react-native": "git+https://gitlab.tagcommander.com/mobile/tccore-react-native#develop"
+    "tccore-react-native": "git+https://github.com/commandersAct/tccore-react-native#1.1.0"
   },
   "resolutions": {
     "@types/react": "17.0.21"
