--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "tcserverside-react-native",
-  "version": "1.1.1",
+  "name": "@commanders-act/tcserverside-react-native",
+  "version": "1.2.0",
   "description": " Commanders Act's ServerSide SDK bridge for react native",
   "main": "src/index",
   "module": "src/index",
@@ -81,14 +81,14 @@
     "typescript": "^5.0.2"
   },
   "dependencies": {
-    "tccore-react-native": "git+https://github.com/commandersAct/tccore-react-native#1.1.1"
   },
   "resolutions": {
     "@types/react": "17.0.21"
   },
   "peerDependencies": {
     "react": "*",
-    "react-native": "*"
+    "react-native": "*",
+    "@commanders-act/tccore-react-native": "git+https://github.com/commandersAct/tccore-react-native#1.2.0"
   },
   "engines": {
     "node": ">= 16.0.0"
