--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "@commanders-act/tccore-react-native": "git+https://github.com/commandersAct/tccore-react-native#1.2.0"
+    "@commanders-act/tccore-react-native": "1.2.0"
   },
   "engines": {
     "node": ">= 16.0.0"
