--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@commandersact/tcserverside-react-native",
-  "version": "1.2.7",
+  "version": "1.3.0",
   "description": " Commanders Act's ServerSide SDK bridge for react native",
   "main": "src/index",
   "module": "src/index",
@@ -27,8 +27,12 @@
     "!**/__tests__",
     "!**/__fixtures__",
     "!**/__mocks__",
-    "!**/.*"
+    "!**/.*",
+    "app.plugin.js"
   ],
+    "expo": {
+    "plugin": "./app.plugin.js"
+  },
   "scripts": {
     "test": "jest",
     "typecheck": "tsc --noEmit",
@@ -78,7 +82,7 @@
     "release-it": "^15.0.0",
     "turbo": "^1.10.7",
     "typescript": "^5.0.2",
-    "@commandersact/tccore-react-native": "git+https://github.com/commandersact/tccore-react-native#1.2.8"
+    "@commandersact/tccore-react-native": "git+https://github.com/commandersact/tccore-react-native#1.3.0"
   },
   "dependencies": {
   },
@@ -88,7 +92,7 @@
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
-    "@commandersact/tccore-react-native": "1.2.8"
+    "@commandersact/tccore-react-native": "1.3.0"
   },
   "engines": {
     "node": ">= 16.0.0"
